# Serviceberry

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  iw-wifiscan.txt  sample.json  script.js
.github/workflows/: rust.yml
src/: config.rs  main.rs
src/adapters/: bluetooth.rs  mod.rs  wifi.rs
src/server/: bluetooth.rs  mdns_service.rs
