[package]
name = "LocationHelper"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] } 
local-ip-address = "0.6.7"
btleplug = "0.11.8"
serde_json = "1.0.145"
regex = "1.12.2"
once_cell = "1.21.3"
mdns-sd = "0.17.1"
axum = "0.8.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tower-http = { version = "0.6.8", features = ["trace"] }
