[package]
name = "service_berry"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time", "process", "net"] }
local-ip-address = "0.6.7"
btleplug = { version = "0.11.8", features = ["serde"] }
serde_json = "1.0.145"
regex = "1.12.2"
once_cell = "1.21.3"
mdns-sd = "0.17.1"
axum = "0.8.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tower-http = { version = "0.6.8", features = ["trace"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json","rustls-tls"] }
reqwest-retry = "0.8.0"
reqwest-middleware = "0.4.2"
reqwest-tracing = "0.5.8"
ble-peripheral-rust = "0.2.0"
uuid = "1.19.0"
tokio-rustls = "0.26.4"
rustls = "0.23.3"
rustls-pemfile = "2.2.0"
rcgen = "0.14.6"
hostname = "0.4.2"
sha2 = "0.10.9"
directories = "6.0.0"
hyper = "1.8.1"
hyper-util = "0.1.19"
hex = "0.4.3"
users = "0.11.0"
